--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-backend/venv
-backend/best_model.keras
-backend/__pycache__
+backend/Python/venv
+backend/Python/best_model.keras
+backend/Python/__pycache__
